hphp/test/quick/setm-method.php.expectf
HipHop Fatal error: Call to undefined method stdClass::foo from anonymous context in %s/test/quick/setm-method.php on line 6
